fix : container clipped out of the screen

--- a/src/styles/pages/_dashboard.scss
+++ b/src/styles/pages/_dashboard.scss
@@ -1,6 +1,7 @@
 .dashboard {
   .container {
-    padding: 60px 100px;
+    padding: 55px 100px;
+    flex-grow: 1;
   }
   h1 {
     color: $primary;
